--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "SAMI",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
